# origami-design-ide

./: .gitignore  CLAUDE.md  CMakeLists.txt  HANDOFF_molecule_topology.md  Makefile  TreemakerWrapper.cpp  agent_loop.py  build.sh  build_linter.sh  linter_server.py  mcp_harness_outline.md  probe_broad.py  probe_determinism.py  probe_geom.py  probe_hshape_creases.py  probe_kawasaki.py  probe_lint.py  probe_reassign.py  probe_scale_only.py  probe_sweep.py  probe_tol2.py  probe_trees.py  probe_v5v9.py  repro_cat.py  server.py  test_crash_isolation.py  test_pipeline_dual.py  treemaker_documentation.md
.github/workflows/: ci.yml
docs/engine-history/: README.md
docs/superpowers/plans/: 2026-06-12-regression-testing-and-ci.md
docs/superpowers/specs/: 2026-06-07-oriedita-linter-design.md  2026-06-12-regression-testing-and-ci-design.md
headless_spike/: CMakeLists.txt  spike_main.cpp
headless_treemaker.cpython-314-darwin.so.dSYM/Contents/: Info.plist
headless_treemaker.cpython-314-darwin.so.dSYM/Contents/Resources/Relocations/aarch64/: headless_treemaker.cpython-314-darwin.so.yml
mcp_harness/: OrieditaValidator.java  TreemakerWrapper.cpp  build.sh  crash_repro.py  linter_server.py  probe_crease.py  probe_crease_quad.py  probe_creasekind.py  probe_fdrop.py  probe_normalize.py  probe_project.py  probe_quad_snap.py  probe_residual.py  probe_server_path.py  probe_snap.py  probe_sweep.py  probe_tol.py  probe_verify.py  probe_vertex.py  server.py  test_deadlock_fix.py
mcp_harness/tests/: baseline_verdicts.json  bless.py  cases.py  runner.py  test_determinism.py  test_geometry.py  test_scaffold.py  test_verdicts.py
mcp_harness/tests/goldens/: hshape.fold  quad.fold  star-4.fold
mcp_harness/treemaker/: VENDOR_NOTE.md
mcp_harness/treemaker/Source/: tmVersion.h
mcp_harness/treemaker/Source/tmModel/tmNLCO/: tmNLCO_alm.cpp
mcp_harness/treemaker/Source/tmModel/tmTreeClasses/: tmEdge.cpp  tmNode.cpp  tmPath.cpp  tmPoint.h  tmTree_FacetOrder.cpp  tmTree_TestTrees.cpp
treemaker/Source/tmModel/tmPtrClasses/: tmArray.h
treemaker/Source/tmModel/tmTreeClasses/: tmCrease.cpp  tmFacetOwner.cpp
